fixed dataStreams and implemented print stats